--- a/JavaBase/pom.xml
+++ b/JavaBase/pom.xml
@@ -34,6 +34,13 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+<!--        打印java对象头信息  -->
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
